methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:20: error: value Grey is not a member of object java.awt.Color
  centre(Color.Grey,Color.black)
               ^